--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_TITLE=Insee SPA Starter
-VITE_DESCRIPTION=A starter for building modern single page application at Insee
+VITE_TITLE=Plateforme de codification manuelle
+VITE_DESCRIPTION=
 VITE_API_URL=
 VITE_OIDC_ISSUER=
 VITE_OIDC_CLIENT_ID=
