--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-dom": "^18.2.0",
         "tsafe": "^1.6.6",
         "tss-react": "^4.9.10",
+        "uuid": "^10.0.0",
         "vite-envs": "^4.3.0",
         "vite-tsconfig-paths": "^4.3.2",
         "zod": "^3.23.8"
