--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
         "@mui/x-date-pickers": "^5.0.12",
         "@tanstack/react-query": "^5.37.1",
         "@tanstack/react-router": "^1.33.6",
-        "axios": "^1.7.1",
+        "axios": "^1.7.2",
         "dayjs": "^1.11.7",
+        "http-proxy-middleware": "^3.0.0",
         "i18nifty": "^3.2.1",
         "oidc-spa": "^4.6.2",
         "react": "^18.2.0",
