--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "oidc-spa": "^4.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-markdown": "^9.0.1",
+        "remark-gfm": "^4.0.0",
         "tsafe": "^1.6.6",
         "tss-react": "^4.9.10",
         "uuid": "^10.0.0",
