--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
         "http-proxy-middleware": "^3.0.0",
         "i18nifty": "^3.2.1",
         "oidc-spa": "^4.6.2",
+        "properties-parser": "^0.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-markdown": "^9.0.1",
         "remark-gfm": "^4.0.0",
+        "text-encoding": "^0.7.0",
         "tsafe": "^1.6.6",
         "tss-react": "^4.9.10",
         "uuid": "^10.0.0",
