--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "devDependencies": {
         "@tanstack/router-devtools": "^1.33.6",
         "@tanstack/router-vite-plugin": "^1.32.17",
+        "@types/properties-parser": "^0.3.3",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
+        "@types/text-encoding": "^0.0.39",
         "@typescript-eslint/eslint-plugin": "^7.2.0",
         "@typescript-eslint/parser": "^7.2.0",
         "@vitejs/plugin-react": "^4.2.1",
